#59 Only store one list of activities and over write when new params are used for fetch. Fix modal z-index

--- a/containers/ActivityStream/style.scss
+++ b/containers/ActivityStream/style.scss
@@ -2,7 +2,6 @@
 
 :global(.ActivityStream__ActivityWrapper) {
   position: relative;
-  z-index: 100;
   margin-bottom: $padding * 4;
 
   &::after {
